<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Standard">Standard</string>
    <string name="menu_Scientific">Scientific</string>
    <string name="menu_Programmer">Programmer</string>
    <string name="menu_Date">Date Calcutator</string>

    <string name="menu_Currency">Currency</string>
    <string name="menu_Volume">Volume</string>
    <string name="menu_Length">Length</string>
    <string name="menu_Weight">Weight and Mass</string>

    <string name="calculator">Calculator</string>
    <string name="mode_standard">Standard</string>
    <string name="mode_science">Science</string>
    <string name="mode_graphs">Graphs</string>
    <string name="mode_dev">Developer</string>
    <string name="mode_date">Date</string>
    <string name="trans">Trans</string>
    <string name="money">Money</string>

    <string name="navi_open">Open navigation</string>
    <string name="navi_close">Close navigation</string>
    <!-- Standard Cal -->
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>

    <string name="Multi">*</string>
    <string name="Div">/</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Equal">=</string>

    <string name="back_space"> </string>
    <string name="Dot">.</string>

    <string name="clear">C</string>
    <string name="clear_entry">CE</string>
    <string name="parentheses">()</string>
    <string name="calculation"> </string>
    <string name="result"> </string>
    <string name="backspace">backspace</string>
    <string name="changeOp">+/-</string>
    <string name="fraction">1/x</string>
    <string name="square">x^2</string>
    <string name="cube">x^3</string>
    <string name="root">√x</string>
    <string name="cuberoot">∛x</string>
    <string name="pencent">%</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e">e</string>
    <string name="second_option">2nd</string>
    <string name="pi">𝛑</string>
    <string name="ClearEntry">CE</string>
    <string name="ln">ln</string>
    <string name="log">Log</string>
    <string name="F">F</string>
    <string name="A">A</string>
    <string name="Lshift"><![CDATA[<<]]></string>
    <string name="Rshift"><![CDATA[>>]]></string>
    <string name="B">B</string>
    <string name="RPar">)</string>
    <string name="LPar">(</string>
    <string name="Mod">%</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="xMuY">x^y</string>
    <string name="xCanY">y√x</string>
    <string name="muoiMu">10^x</string>
    <string name="haiMu">2^x</string>
    <string name="eMu">e^x</string>
    <string name="logY">Logy</string>
    <string name="sin">sin</string>
    <string name="sinh">sinh</string>
    <string name="arcsin">arcsin</string>
    <string name="arcsinh">arcsinh</string>
    <string name="cos">cos</string>
    <string name="cosh">cosh</string>
    <string name="arccos">arccos</string>
    <string name="arccosh">arccosh</string>
    <string name="tan">tan</string>
    <string name="tanh">tanh</string>
    <string name="arctan">arctan</string>
    <string name="arctanh">arctanh</string>
    <string name="hyp">hyp</string>
    <string name="sec">sec</string>
    <string name="sech">sech</string>
    <string name="arcsec">arcsec</string>
    <string name="arcsech">arcsech</string>
    <string name="csc">csc</string>
    <string name="csch">csch</string>
    <string name="arccsc">arccsc</string>
    <string name="arccsch">arccsch</string>
    <string name="cot">cot</string>
    <string name="coth">coth</string>
    <string name="arccoth">arccoth</string>
    <string name="arccot">cot</string>

</resources>