<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.programmer.ProgrammerFragment">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnA"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/A"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnLshift"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Lshift"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnRshift"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Rshift"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnCE"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/ClearEntry"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/it_btnbackspace"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/back_space"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:srcCompat="@drawable/ic_backspace1_foreground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnB"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/B"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnLpar"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/LPar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnRpar"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/RPar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnMod"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Mod"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/it_btnDiv"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Div"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:srcCompat="@drawable/ic_div1_foreground" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnC"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/C"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnSeven"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Seven"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnEight"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Eight"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnNine"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Nine"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/it_btnMulti"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Multi"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:srcCompat="@drawable/ic_multi_foreground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnD"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/D"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnFour"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Four"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnFive"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Five"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnSix"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Six"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnMinus"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Minus"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnE"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/E"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnOne"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/One"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnTwo"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Two"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnThree"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Three"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnPlus"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Plus"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/it_btnF"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/F"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnChangeOP"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/changeOp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnZero"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Zero"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnDot"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Dot"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/it_btnEqual"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:background="@drawable/button"
                android:text="@string/Equal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/HexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/HEX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/HEX" />

    <TextView
        android:id="@+id/HEX"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="HEX"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DEC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEC"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/DexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DEC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/DEC" />

    <TextView
        android:id="@+id/OCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OCT"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/OctText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/OctText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/OCT"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/BIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIN"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/BinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/BIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/it_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/it_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"/>

    <TextView
        android:id="@+id/it_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:text="@string/Zero"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end"/>

    <Button
        android:id="@+id/it_change"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:text="Phép toán thao tác bit"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        android:background="@drawable/button"
        android:textSize="17sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>